# tap-postgres

./: .gitignore  .pre-commit-config.yaml  .precommit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  project_add.yml  release.yml  test.yml
log_based/: init.sql
ssl/: ca.crt  cert.crt  pg_hba.conf  pkey.key  public_pkey.key  root.crt  server.key
tap_postgres/: __init__.py  _wal_helpers.py  client.py  connection_parameters.py  postgres_type_adapter.py  tap.py  wal_reader.py
tap_postgres/tests/: __init__.py  conftest.py  test_core.py
tests/: conftest.py  settings.py  test_aws_iam_auth.py  test_connection_parameters.py  test_consume.py  test_core.py  test_custom_filters.py  test_log_based.py  test_log_based_ssl.py  test_postgres_type_adapter.py  test_replication_key.py  test_selected_columns_only.py  test_selected_schema.py  test_slot_name.py  test_smart_pagination.py  test_sql_types_to_jsonschema.py  test_ssh_tunnel.py  test_ssl.py  test_stream_class.py  test_wal_helpers.py  test_wal_reader.py
tests/resources/: data.json  data_selected_columns_only.json
